// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bolt text-link Props icon after 1`] = `
<a href="https://pega.com"
   target="_blank"
   class="e-bolt-text-link"
>
  This is a text link
  <span class="e-bolt-text-link__icon-after"
        aria-hidden="true"
  >
    <svg class="e-bolt-icon"
         aria-hidden="true"
         enable-background="new 0 0 32 32"
         viewbox="0 0 32 32"
         xmlns="http://www.w3.org/2000/svg"
    >
      <path clip-rule="evenodd"
            d="m11.8 3.5c-.7-.7-1.9-.7-2.6 0s-.8 1.9-.1 2.7l9.9 9.8-9.8 9.8c-.7.7-.7 1.9 0 2.6.3.4.8.6 1.2.6.5 0 1-.2 1.3-.6l11.1-11.1c.7-.7.7-1.9 0-2.6z"
            fill="#151619"
            fill-rule="evenodd"
      >
      </path>
    </svg>
  </span>
</a>
`;

exports[`Bolt text-link Props reverse underline 1`] = `
<a href="https://pega.com"
   target="_blank"
   class="e-bolt-text-link e-bolt-text-link--reversed-underline"
>
  This is a text link
</a>
`;

exports[`Bolt text-link default 1`] = `
<a href="https://pega.com"
   target="_blank"
   class="e-bolt-text-link"
>
  This is a text link
</a>
`;
